# Finam_market_data_consumer

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
docker/: Dockerfile
src/: config.py  consumer_dom.py
